--- a/admin.html
+++ b/admin.html
@@ -57,7 +57,7 @@
 
         const SUPABASE_URL = "https://poxxulxqzxwotequkwbw.supabase.co";
         const SUPABASE_SERVICE_ROLE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBveHh1bHhxenh3b3RlcXVrd2J3Iiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc0MDI1NjM2NywiZXhwIjoyMDU1ODMyMzY3fQ.qCvdI1kkLn72ucM9aBuXttK-95vux-YRC_J2PUSI8WA"; 
-        const STORAGE_BUCKET = "geojson-files";
+        const STORAGE_BUCKET = "geojson-files"; // Ensure this matches your Supabase bucket
         const FILE_NAME = "lots.geojson";
 
         function initializeMap() {
@@ -134,11 +134,21 @@
             }).addTo(map);
         }
 
+        function autoSave() {
+            if (!selectedFeature) return;
+            selectedFeature.properties.price = document.getElementById('lot-price').value;
+            selectedFeature.properties.status = document.getElementById('lot-status').value;
+            selectedFeature.properties.area_m = document.getElementById('lot-size').value;
+            selectedFeature.properties.Category = document.getElementById('lot-category').value;
+            selectedFeature.properties.Description = document.getElementById('lot-description').value;
+            selectedFeature.properties.buy_link = document.getElementById('lot-link').value; 
+        }
+
         async function saveGeoJSONToSupabase() {
             const fileContent = new Blob([JSON.stringify(geojsonData, null, 4)], { type: "application/json" });
 
             try {
-                const response = await fetch(`${SUPABASE_URL}/storage/v1/object/public/${STORAGE_BUCKET}/${FILE_NAME}`, {
+                const response = await fetch(`${SUPABASE_URL}/storage/v1/object/${STORAGE_BUCKET}/${FILE_NAME}`, {
                     method: "PUT",
                     headers: {
                         "Authorization": `Bearer ${SUPABASE_SERVICE_ROLE_KEY}`,
