--- a/admin.html
+++ b/admin.html
@@ -13,40 +13,41 @@
             font-size: 8px;
             font-weight: normal;
             color: black;
-            background: none;
-            padding: 0;
+            background: white;
+            padding: 2px;
+            border-radius: 2px;
+            border: 1px solid black;
         }
     </style>
 </head>
 <body onload="initializeMap()">
     <h2>GeoJSON Lot Editor</h2>
     <input type="file" id="fileInput" accept=".geojson" onchange="loadFile(event)">
-    <button onclick="saveGeoJSONToSupabase()">💾 Save & Update Supabase</button>
     <div id="map"></div>
 
     <div id="editor" style="display:none;">
         <h3>Edit Lot</h3>
         <p><strong>Lot ID:</strong> <span id="lot-id"></span></p>
-        <label>Price: $<input type="text" id="lot-price" oninput="autoSave()"></label><br>
+        <label>Price: $<input type="text" id="lot-price" oninput="autoSaveAndUpload()"></label><br>
         <label>Status:
-            <select id="lot-status" onchange="autoSave()">
+            <select id="lot-status" onchange="autoSaveAndUpload()">
                 <option value="For Sale">For Sale</option>
                 <option value="Sold">Sold</option>
                 <option value="Reserved">Reserved</option>
                 <option value="Not for Sale">Not for Sale</option>
             </select>
         </label><br>
-        <label>Lot Size: <input type="text" id="lot-size" oninput="autoSave()"></label><br>
+        <label>Lot Size: <input type="text" id="lot-size" oninput="autoSaveAndUpload()"></label><br>
         <label>Category:
-            <select id="lot-category" onchange="autoSave()">
+            <select id="lot-category" onchange="autoSaveAndUpload()">
                 <option value="Single Family Homesites">Single Family Homesites</option>
                 <option value="Multi Family Homesites">Multi Family Homesites</option>
                 <option value="Commercial">Commercial</option>
                 <option value="Mixed Use">Mixed Use</option>
             </select>
         </label><br>
-        <label>Description: <textarea id="lot-description" oninput="autoSave()"></textarea></label><br>
-        <label>Buy Link: <input type="text" id="lot-link" oninput="autoSave()"></label><br> 
+        <label>Description: <textarea id="lot-description" oninput="autoSaveAndUpload()"></textarea></label><br>
+        <label>Buy Link: <input type="text" id="lot-link" oninput="autoSaveAndUpload()"></label><br> 
     </div>
 
     <script>
@@ -57,7 +58,7 @@
 
         const SUPABASE_URL = "https://poxxulxqzxwotequkwbw.supabase.co";
         const SUPABASE_SERVICE_ROLE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBveHh1bHhxenh3b3RlcXVrd2J3Iiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc0MDI1NjM2NywiZXhwIjoyMDU1ODMyMzY3fQ.qCvdI1kkLn72ucM9aBuXttK-95vux-YRC_J2PUSI8WA"; 
-        const STORAGE_BUCKET = "geojson-files"; // Ensure this matches your Supabase bucket
+        const STORAGE_BUCKET = "geojson-files";
         const FILE_NAME = "lots.geojson";
 
         function initializeMap() {
@@ -113,6 +114,14 @@
                     return { color: getLotColor(feature.properties.status), weight: 2 };
                 },
                 onEachFeature: function (feature, layer) {
+                    // Display Lot ID on Map
+                    let label = L.divIcon({
+                        className: 'lot-label',
+                        html: feature.properties.plot_id,
+                        iconSize: [1, 1]
+                    });
+                    L.marker(layer.getBounds().getCenter(), { icon: label }).addTo(map);
+
                     layer.on('click', function () {
                         if (selectedLayer) {
                             selectedLayer.setStyle({ color: getLotColor(selectedLayer.feature.properties.status) });
@@ -134,14 +143,16 @@
             }).addTo(map);
         }
 
-        function autoSave() {
+        function autoSaveAndUpload() {
             if (!selectedFeature) return;
             selectedFeature.properties.price = document.getElementById('lot-price').value;
             selectedFeature.properties.status = document.getElementById('lot-status').value;
             selectedFeature.properties.area_m = document.getElementById('lot-size').value;
             selectedFeature.properties.Category = document.getElementById('lot-category').value;
             selectedFeature.properties.Description = document.getElementById('lot-description').value;
-            selectedFeature.properties.buy_link = document.getElementById('lot-link').value; 
+            selectedFeature.properties.buy_link = document.getElementById('lot-link').value;
+
+            saveGeoJSONToSupabase();
         }
 
         async function saveGeoJSONToSupabase() {
@@ -158,14 +169,12 @@
                 });
 
                 if (response.ok) {
-                    alert("✅ GeoJSON Successfully Updated in Supabase!");
+                    console.log("✅ Auto-Saved GeoJSON to Supabase.");
                 } else {
-                    alert("❌ Upload Failed: Check Supabase permissions.");
-                    console.error("Upload Error:", await response.text());
+                    console.error("❌ Auto-Save Failed:", await response.text());
                 }
             } catch (error) {
-                console.error("❌ Error saving to Supabase:", error);
-                alert("❌ Failed to update GeoJSON in Supabase.");
+                console.error("❌ Error auto-saving to Supabase:", error);
             }
         }
     </script>
