--- a/admin.html
+++ b/admin.html
@@ -10,7 +10,7 @@
         #map { height: 60vh; width: 100%; }
         #editor { padding: 10px; }
         .lot-label {
-            font-size: 10px; /* Slightly larger font */
+            font-size: 12px; /* Slightly larger font */
             font-weight: 300; /* Thin font */
             color: black;
             background: none;
@@ -24,6 +24,7 @@
             font-weight: bold;
             margin-left: 10px;
             border-radius: 5px;
+            transition: opacity 0.5s;
         }
         .success { background-color: lightgreen; color: darkgreen; }
         .error { background-color: lightcoral; color: darkred; }
@@ -183,8 +184,9 @@
                     body: fileContent
                 });
 
-                statusIndicator.textContent = response.ok ? "✅ Upload Success" : "❌ Upload Failed";
-                statusIndicator.className = response.ok ? "status-indicator success" : "status-indicator error";
+                statusIndicator.textContent = "✅ Upload Success";
+                statusIndicator.className = "status-indicator success";
+                setTimeout(() => statusIndicator.textContent = "", 3000); // Disappears after 3 seconds
             } catch {
                 statusIndicator.textContent = "❌ Error uploading.";
                 statusIndicator.className = "status-indicator error";
