--- a/admin.html
+++ b/admin.html
@@ -12,6 +12,7 @@
         .lot-label {
             font-size: 12px;
             font-weight: 300;
+            color: black; /* default color, overridden in JavaScript */
             background: none;
             padding: 0;
             border: none;
@@ -73,7 +74,7 @@
         let map;
 
         const SUPABASE_URL = "https://poxxulxqzxwotequkwbw.supabase.co";
-        const SUPABASE_SERVICE_ROLE_KEY = "YOUR_SUPABASE_KEY_HERE"; 
+        const SUPABASE_SERVICE_ROLE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBveHh1bHhxenh3b3RlcXVrd2J3Iiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc0MDI1NjM2NywiZXhwIjoyMDU1ODMyMzY3fQ.qCvdI1kkLn72ucM9aBuXttK-95vux-YRC_J2PUSI8WA"; 
         const STORAGE_BUCKET = "geojson-files";
         const FILE_NAME = "lots.geojson";
 
@@ -96,6 +97,26 @@
                 .catch(error => console.error("❌ Error loading GeoJSON from Supabase:", error));
         }
 
+        function getLotColor(status) {
+            switch (status) {
+                case "For Sale": return "green";
+                case "Sold": return "red";
+                case "Reserved": return "yellow";
+                case "Not for Sale": return "grey";
+                default: return "blue"; 
+            }
+        }
+
+        function loadFile(event) {
+            const file = event.target.files[0];
+            const reader = new FileReader();
+            reader.onload = function(e) {
+                geojsonData = JSON.parse(e.target.result);
+                loadGeoJSON();
+            };
+            reader.readAsText(file);
+        }
+
         function loadGeoJSON() {
             if (!geojsonData) return;
 
@@ -110,18 +131,14 @@
                     return { color: getLotColor(feature.properties.status), weight: 2 };
                 },
                 onEachFeature: function (feature, layer) {
-                    let lotId = feature.properties.plot_id || "Unknown";
-                    let buyLink = feature.properties.buy_link || "";
-                    let status = feature.properties.status || "";
-
-                    let labelColor = (status === "For Sale" && !buyLink.trim()) ? "red" : "black";
-
                     let label = L.divIcon({
                         className: 'lot-label',
-                        html: `<span style="color: ${labelColor};">${lotId}</span>`,
+                        html: feature.properties.plot_id,
                         iconSize: [1, 1]
                     });
-
+                    let labelColor = (feature.properties.status === "For Sale" && (!feature.properties.buy_link || feature.properties.buy_link.trim() === "")) ? "red" : "black";
+                    label.options.className = 'lot-label';
+                    label.options.html = `<span style="color: ${labelColor};">${feature.properties.plot_id}</span>`;
                     L.marker(layer.getBounds().getCenter(), { icon: label }).addTo(map);
 
                     layer.on('click', function () {
@@ -133,36 +150,16 @@
 
                         selectedFeature = feature;
                         document.getElementById('editor').style.display = 'block';
-                        document.getElementById('lot-id').innerText = lotId;
+                        document.getElementById('lot-id').innerText = feature.properties.plot_id;
                         document.getElementById('lot-price').value = feature.properties.price || '';
-                        document.getElementById('lot-status').value = status || '';
+                        document.getElementById('lot-status').value = feature.properties.status || '';
                         document.getElementById('lot-size').value = feature.properties.area_m || '';
                         document.getElementById('lot-category').value = feature.properties.Category || '';
                         document.getElementById('lot-description').value = feature.properties.Description || '';
-                        document.getElementById('lot-link').value = buyLink || ''; 
+                        document.getElementById('lot-link').value = feature.properties.buy_link || ''; 
                     });
                 }
             }).addTo(map);
-        }
-
-        function getLotColor(status) {
-            switch (status) {
-                case "For Sale": return "green";
-                case "Sold": return "red";
-                case "Reserved": return "yellow";
-                case "Not for Sale": return "grey";
-                default: return "blue"; 
-            }
-        }
-
-        function downloadGeoJSON() {
-            const element = document.createElement('a');
-            const file = new Blob([JSON.stringify(geojsonData, null, 2)], {type: 'application/json'});
-            element.href = URL.createObjectURL(file);
-            element.download = 'geojsonData.geojson';
-            document.body.appendChild(element);
-            element.click();
-            document.body.removeChild(element);
         }
 
         function autoSaveAndUpload() {
@@ -175,6 +172,42 @@
             selectedFeature.properties.buy_link = document.getElementById('lot-link').value;
 
             saveGeoJSONToSupabase();
+        }
+
+        function downloadGeoJSON() {
+            const element = document.createElement('a');
+            const file = new Blob([JSON.stringify(geojsonData, null, 2)], {type: 'application/json'});
+            element.href = URL.createObjectURL(file);
+            element.download = 'geojsonData.geojson';
+            document.body.appendChild(element);
+            element.click();
+            document.body.removeChild(element);
+        }
+
+        async function saveGeoJSONToSupabase() {
+            const statusIndicator = document.getElementById("statusIndicator");
+            statusIndicator.textContent = "Uploading...";
+            statusIndicator.className = "status-indicator";
+
+            const fileContent = new Blob([JSON.stringify(geojsonData, null, 4)], { type: "application/json" });
+
+            try {
+                const response = await fetch(`${SUPABASE_URL}/storage/v1/object/${STORAGE_BUCKET}/${FILE_NAME}`, {
+                    method: "PUT",
+                    headers: {
+                        "Authorization": `Bearer ${SUPABASE_SERVICE_ROLE_KEY}`,
+                        "Content-Type": "application/json"
+                    },
+                    body: fileContent
+                });
+
+                statusIndicator.textContent = "✅ Upload Success";
+                statusIndicator.className = "status-indicator success";
+                setTimeout(() => statusIndicator.textContent = "", 3000); // Disappears after 3 seconds
+            } catch {
+                statusIndicator.textContent = "❌ Error uploading.";
+                statusIndicator.className = "status-indicator error";
+            }
         }
     </script>
 </body>
